tests/error/comptime/check_destruct_value5.bz
// error: invalid memory access of an object of type 'mut i32'
// note: while evaluating expression at compile time
// note: address points to an object outside its lifetime in this allocation
// note: allocation was made while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let p = __builtin_comptime_malloc(i32, 1);
		defer __builtin_comptime_free(p);
		__builtin_inplace_construct(p, 0);

		__builtin_destruct_value(*p);
		__builtin_destruct_value(*p);
	});
}
